# android-resources-checker

./: .coveragerc  .flake8  .gitignore  CHANGELOG.md  LICENSE.md  Makefile  README.md  analyzer.py  app.py  entrypoint.py  models.py  pyproject.toml  reporting.py  resources.py
.github/workflows/: main.yml  publish.yml
android-resources-checker/: analyzer.py  app.py  entrypoint.py  main.py  models.py  reporting.py
android_resources_checker/: __init__.py  analyzer.py  app.py  entrypoint.py  files.py  models.py  reporting.py  resources.py  validator.py
tests/: test_random.py  test_reporting.py  test_resources_analyzer.py  test_resources_fetcher.py  test_validator.py
tests/fixtures/: dummy-anim.xml  dummy-class.kt  dummy-dimens.xml  dummy-drawable.xml  dummy-layout.xml  dummy-styles.kt  dummy-styles.xml  dummy-values-color.xml
