[tool.poetry]
name = "Fabio Carballo <fabio.og.carballo@gmail.com>"
version = "0.1.0"
description = ""
authors = ["Fabio Carballo <fabio.og.carballo@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
rich = "^10.0.0"
click = "^7.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
