[tool.poetry]
name = "android-resources-checker"
version = "0.0.8"
description = "Check if your android resources are being unused."
authors = ["Fabio Carballo <fabio.og.carballo@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/fabiocarballo/android-resources-checker"
repository = "https://github.com/fabiocarballo/android-resources-checker"
include = ["LICENSE.md"]

[tool.poetry.dependencies]
python = "^3.8"
rich = "^10.0.0"
click = "^7.1.2"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pytest = "6.2.2"
pytest-cov = "^2.11.1"

[tool.poetry.scripts]
android-resources-checker = "android_resources_checker:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
